bnd2pde: Migrate ResolutionView
- 1st draft of Bndtools Resolution view, which shows Requirements and
Capabilities of selected resources (.jar files, .bnd files,
RepositoryView entries)
add some missing icons
fix more icons
Add license headers to migrated files

Replace SelectionUtils with Adapters.adapt()
cleanup, add suggestions from PR
fix icon
fix compile warnings
fix ClassCastException in CapReqComparator

- reason was that the namespace 'osgi.ee' can contain List<Version>
- so we now handle cases of single Version vs. List<Version>
- for lists we take the highest version for comparison

remove temp. migration package
svg images

- update as many images to svg (taken from
https://github.com/eclipse-platform/eclipse.platform.images/tree/master/org.eclipse.images/eclipse-svg)
- for some I coudn't find replacements yet. Will do them in another PR